add create module

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -8,6 +8,10 @@
     "notification": "通知",
     "user": "私"
   },
+  "createNew": {
+    "createPost": "投稿",
+    "createQuestion": "質問"
+  },
   "authentication": {
     "input": {
       "namePlaceholder": "名前(3-20文字)",
