--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -20,6 +20,11 @@
     "topicSelect": "トピックを選択します",
     "petSelect": "関連ペットを選択します"
   },
+  "search": {
+    "history": "検索履歴",
+    "clearHistory": "履歴をクリア",
+    "postSearch": "投稿"
+  },
   "authentication": {
     "input": {
       "namePlaceholder": "名前(3-20文字)",
