--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -32,6 +32,7 @@
     },
     "login": {
       "title": "ログイン",
+      "logining": "ログイン中",
       "gotoSignup": "アカウント登録",
       "thirdPartyLogin": "その他によるログイン",
       "sendVerificationCodeAction": "ログイン",
