fix comment reply

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -95,6 +95,7 @@
     "loginToContinue": "ログインしてください"
   },
   "error": {
-    "noNetwork": "ネットワークに繋がりません"
+    "noNetwork": "ネットワークに繋がりません",
+    "serviceError": "サービスが混雑しています"
   }
 }
