--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -38,7 +38,8 @@
   "search": {
     "history": "検索履歴",
     "clearHistory": "履歴をクリア",
-    "postSearch": "投稿"
+    "postSearch": "投稿",
+    "questionSearch": "質問"
   },
   "authentication": {
     "input": {
