fix topic select

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -41,6 +41,7 @@
       "questionContentPlaceholder": "質問の詳細",
       "answerContentPlaceholder": "回答"
     },
+    "topicSelectTitle": "トピック選択",
     "topicSelect": "トピックを選択します",
     "petSelect": "関連ペットを選択します"
   },
