add system notification

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -97,7 +97,7 @@
     "userAnswer": "回答",
     "userfavouritePost": "お気に入り",
     "userPet": "私のペット",
-    "followedCount": "フォロワー",
+    "followerCount": "フォロワー",
     "followCount": "フォロー",
     "postCount": "投稿数",
     "questionCount": "問題数",
