add loading skeleton

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -50,7 +50,8 @@
     "topicSelect": "トピックを選択します",
     "petSelect": "関連ペットを選択します",
     "reportTitle": "問題報告",
-    "feedbackTitle": "フィードバック"
+    "feedbackTitle": "フィードバック",
+    "createPet": "ペット追加"
   },
 
   "search": {
