add custom flatlist

--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -290,6 +290,10 @@
     }
   },
 
+  "component": {
+    "emptyList": "データがありません"
+  },
+
   "validation": {
     "common": {
       "emptyValue": "入力してください",
