--- a/packages/app/src/providers/locale/lang/ja.json
+++ b/packages/app/src/providers/locale/lang/ja.json
@@ -25,6 +25,7 @@
     "time": "時間",
     "alertDelete": "削除しますか？",
     "goback": "戻る",
+    "notFound": "何も見つかりませんでした",
     "thanks": "ありがとうございます"
   },
 
